--- a/src/html/updates/great-news-channel-special/index.html
+++ b/src/html/updates/great-news-channel-special/index.html
@@ -10,16 +10,16 @@
 
     <main id="post--main" class="post--font-size main--post">
 
-        <div class="post--bg-image" style="background-image: url('/img/posts/p017/cap.jpg')">
+        <div class="post--bg-image" style="background-image: url('/img/updates/code01.jpg')">
 
             @@include('../../../parts/header-post.html', {
-
+                "color": "#000"
             })
 
             <div class="post--bg-image-block">
                 <div class="post--bg-image-top">
-                    <h1 class="head--static-font">Интересное название тестовой записи</h1>
-                    <p class="post--start-p subhead--static-font">Некоторое небольшое содержимое.</p>
+                    <h1 class="head--static-font">Обновление новостного канала Special</h1>
+                    <p class="post--start-p subhead--static-font">Улучшение дизайна. Многоязычность. Доступность.</p>
                 </div>
                 <div class="post--bg-image-bottom">
                     <div class="text-white">
@@ -34,7 +34,7 @@
         <div class="container">
 
             @@include('../../../parts/p--font-size.html', {
-
+                "left": "true"
             })
 
             <div class="container--post">
@@ -59,7 +59,7 @@
             </div>
 
             @@include('../../../parts/p--more-3.html', {
-            "active": "p-how-did-i-start-learning-programming"
+                "active": "p-how-did-i-start-learning-programming"
             })
         </div>
 
