--- a/src/parts/header-post.html
+++ b/src/parts/header-post.html
@@ -8,24 +8,11 @@
                             <button onClick="ChangeThemeButton()" aria-label="Сменить темную и светлую тему"
                             class="btn btn-light btn-light--post px-4 py-2 d-flex header--button
                                                     text-decoration-none text-invert-dark align-items-center">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white" class="me-btn-1"
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="@@color" class="me-btn-1"
                                     viewBox="0 0 16 16">
                                     <use id="changethemesvg" xlink:href="/img/icons/theme.svg#light"></use>
                                 </svg>
-                                <span class="text-white">Тема</span>
-                            </button>
-                        </div>
-                    </div>
-                    <div class="header--adaptive-button me-2">
-                        <div class="btn-rounded fs-5">
-                            <button onClick="ChangeBackground()" aria-label="Сменить задний фон" class="btn btn-light btn-light--post px-4 py-2 d-flex header--button
-                                                    text-decoration-none text-invert-dark align-items-center">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white" class="me-btn-1"
-                                    viewBox="0 0 16 16">
-                                    <path fill-rule="evenodd"
-                                        d="M11.5 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L11 2.707V14.5a.5.5 0 0 0 .5.5zm-7-14a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L4 13.293V1.5a.5.5 0 0 1 .5-.5z" />
-                                </svg>
-                                <span class="text-white">Фон</span>
+                                <span style="color: @@color">Тема</span>
                             </button>
                         </div>
                     </div>
@@ -35,7 +22,7 @@
             <!-- PC -->
             <div class="nav col-12 col-md-auto header--logo-pc mb-2 justify-content-center mb-md-0">
                 <a href="/" aria-label="Перейти на главную страницу" class="d-block header--logo-pc">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="white" class="header--logo-pc header--logo"
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="@@color" class="header--logo-pc header--logo"
                         viewBox="0 0 1211.79 303.25">
                         <path
                             d="M877.07 167.05a62 62 0 0 1-13.94 31.84 76.34 76.34 0 0 1-29.5 21.48q-18 7.65-40.24 7.65-25.17 0-44.3-9.26t-29.87-26q-10.74-16.78-10.74-38.5 0-22 10.74-38.63t29.87-26.05q19.13-9.37 44.3-9.38 22.22 0 40.24 7.78a78.08 78.08 0 0 1 29.5 21.47 61.56 61.56 0 0 1 13.94 32h-41.22q-3.21-14.31-14.69-22.09t-27.77-7.78q-13.08 0-22.83 5.06a34.94 34.94 0 0 0-14.93 14.57q-5.19 9.5-5.19 23.08 0 13.32 5.19 22.83a34.86 34.86 0 0 0 14.93 14.56q9.75 5.07 22.83 5.06 16.55 0 28-8.14a34.85 34.85 0 0 0 14.44-21.48ZM919.79 67.82q-11.12 0-18.14-5.8a19 19 0 0 1-7-15.43q0-9.87 7-15.67t18.14-5.8q11.34 0 18.26 5.8t6.92 15.67q0 9.63-6.92 15.43t-18.26 5.8ZM899.3 82.39l20.49 3.94 20.73-3.94v141.93h-41.23ZM1111.08 154.22q-4 22.22-14.44 38.87a75.44 75.44 0 0 1-26.41 25.8 70.51 70.51 0 0 1-35.67 9.13q-20.49 0-36.29-9.26a63.79 63.79 0 0 1-24.56-25.91q-8.76-16.67-8.76-38.63 0-22.21 8.76-38.88a63.75 63.75 0 0 1 24.56-25.92q15.8-9.25 36.29-9.26a70.41 70.41 0 0 1 35.67 9.14 76.41 76.41 0 0 1 26.56 25.79q10.59 16.66 14.29 39.13Zm-104.42 0a45 45 0 0 0 5.07 21.72 37.4 37.4 0 0 0 13.94 14.68 39.18 39.18 0 0 0 20.49 5.31 46.79 46.79 0 0 0 21.84-5.31 59.24 59.24 0 0 0 18.15-14.68 70.51 70.51 0 0 0 12.34-21.72 72.12 72.12 0 0 0-12.34-21.85 58.68 58.68 0 0 0-18.15-14.81 46.79 46.79 0 0 0-21.84-5.31 39.18 39.18 0 0 0-20.49 5.31 37.29 37.29 0 0 0-13.94 14.81 45.73 45.73 0 0 0-5.07 21.85Zm93.56 70.1-5.93-51.34 6.67-18.76-6.67-18.54 5.93-51.83h42.7l-8.13 70.37 8.14 70.1ZM1170.57 34.25h41.22v190.07h-41.22Z" />
@@ -60,12 +47,12 @@
                         <div class="text-invert-dark btn-rounded fs-5">
                             <a href="/write-post.html" aria-label="Написать статью для спешиал"
                                 class="btn btn-light px-4 d-flex header--button btn-light--post text-decoration-none text-invert-dark align-items-center">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white" class="me-btn-1"
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="@@color" class="me-btn-1"
                                     viewBox="0 0 16 16">
                                     <path fill-rule="evenodd"
                                         d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z" />
                                 </svg>
-                                <span class="text-white">Статья</span>
+                                <span style="color: @@color">Статья</span>
                             </a>
                         </div>
                     </div>
@@ -78,7 +65,7 @@
             <div class="col-md-auto header--logo-mobile mb-2 justify-content-center mb-md-0">
                 <button data-bs-toggle="offcanvas" data-bs-target="#mobileMenu" aria-controls="mobileMenu" class="btn"
                     aria-label="Открыть мобильное меню">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon d-block header--logo-mobile header--logo"
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="@@color" class=" d-block header--logo-mobile header--logo"
                         viewBox="0 0 1211.79 303.25">
                         <path
                             d="M877.07 167.05a62 62 0 0 1-13.94 31.84 76.34 76.34 0 0 1-29.5 21.48q-18 7.65-40.24 7.65-25.17 0-44.3-9.26t-29.87-26q-10.74-16.78-10.74-38.5 0-22 10.74-38.63t29.87-26.05q19.13-9.37 44.3-9.38 22.22 0 40.24 7.78a78.08 78.08 0 0 1 29.5 21.47 61.56 61.56 0 0 1 13.94 32h-41.22q-3.21-14.31-14.69-22.09t-27.77-7.78q-13.08 0-22.83 5.06a34.94 34.94 0 0 0-14.93 14.57q-5.19 9.5-5.19 23.08 0 13.32 5.19 22.83a34.86 34.86 0 0 0 14.93 14.56q9.75 5.07 22.83 5.06 16.55 0 28-8.14a34.85 34.85 0 0 0 14.44-21.48ZM919.79 67.82q-11.12 0-18.14-5.8a19 19 0 0 1-7-15.43q0-9.87 7-15.67t18.14-5.8q11.34 0 18.26 5.8t6.92 15.67q0 9.63-6.92 15.43t-18.26 5.8ZM899.3 82.39l20.49 3.94 20.73-3.94v141.93h-41.23ZM1111.08 154.22q-4 22.22-14.44 38.87a75.44 75.44 0 0 1-26.41 25.8 70.51 70.51 0 0 1-35.67 9.13q-20.49 0-36.29-9.26a63.79 63.79 0 0 1-24.56-25.91q-8.76-16.67-8.76-38.63 0-22.21 8.76-38.88a63.75 63.75 0 0 1 24.56-25.92q15.8-9.25 36.29-9.26a70.41 70.41 0 0 1 35.67 9.14 76.41 76.41 0 0 1 26.56 25.79q10.59 16.66 14.29 39.13Zm-104.42 0a45 45 0 0 0 5.07 21.72 37.4 37.4 0 0 0 13.94 14.68 39.18 39.18 0 0 0 20.49 5.31 46.79 46.79 0 0 0 21.84-5.31 59.24 59.24 0 0 0 18.15-14.68 70.51 70.51 0 0 0 12.34-21.72 72.12 72.12 0 0 0-12.34-21.85 58.68 58.68 0 0 0-18.15-14.81 46.79 46.79 0 0 0-21.84-5.31 39.18 39.18 0 0 0-20.49 5.31 37.29 37.29 0 0 0-13.94 14.81 45.73 45.73 0 0 0-5.07 21.85Zm93.56 70.1-5.93-51.34 6.67-18.76-6.67-18.54 5.93-51.83h42.7l-8.13 70.37 8.14 70.1ZM1170.57 34.25h41.22v190.07h-41.22Z" />
@@ -103,52 +90,52 @@
         <ul class="nav col-12 col-md-auto fs-5 justify-content-center mb-md-0 header--adaptive-nav">
             @@if(context.activeItem == "posts") {
             <li class="mx-2 px-3">
-                <p class="nav-link header--nav-link-active header--article-link text-white text-lowercase h3 mb-0">СТАТЬИ</p>
+                <p class="nav-link header--nav-link-active header--article-link text-lowercase h3 mb-0" style="color: @@color">СТАТЬИ</p>
             </li>
             }
             @@if(context.activeItem != "posts") {
             <li class="mx-2 px-3"><a href="/p/"
-                    class="nav-link h3 header--article-link text-lowercase text-white header--nav-link-white">СТАТЬИ</a></li>
+                    class="nav-link h3 header--article-link text-lowercase header--nav-link-white" style="color: @@color">СТАТЬИ</a></li>
             }
 
             @@if(context.activeItem == "updates") {
             <li class="mx-2 px-3">
-                <p class="nav-link header--nav-link-active h3 header--article-link text-white text-lowercase mb-0">ОБНОВЛЕНИЯ</p>
+                <p class="nav-link header--nav-link-active h3 header--article-link text-lowercase mb-0" style="color: @@color">ОБНОВЛЕНИЯ</p>
             </li>
             }
             @@if(context.activeItem != "updates") {
             <li class="mx-2 px-3"><a href="/updates/"
-                    class="nav-link header--article-link h3 text-lowercase text-white header--nav-link">ОБНОВЛЕНИЯ</a></li>
+                    class="nav-link header--article-link h3 text-lowercase header--nav-link-white" style="color: @@color">ОБНОВЛЕНИЯ</a></li>
             }
 
             @@if(context.activeItem == "games") {
             <li class="mx-2 px-3">
-                <p class="nav-link header--nav-link-active h3 header--article-link text-white text-lowercase mb-0">ИГРЫ</p>
+                <p class="nav-link header--nav-link-active h3 header--article-link text-lowercase mb-0" style="color: @@color">ИГРЫ</p>
             </li>
             }
             @@if(context.activeItem != "games") {
             <li class="mx-2 px-3"><a href="/games/"
-                    class="nav-link header--article-link h3 text-lowercase text-white header--nav-link-white">ИГРЫ</a></li>
+                    class="nav-link header--article-link h3 text-lowercase header--nav-link-white" style="color: @@color">ИГРЫ</a></li>
             }
 
             @@if(context.activeItem == "tech") {
             <li class="mx-2 px-3">
-                <p class="nav-link header--nav-link-active h3 header--article-link text-white text-lowercase mb-0">ТЕХНИКА</p>
+                <p class="nav-link header--nav-link-active h3 header--article-link text-lowercase mb-0" style="color: @@color">ТЕХНИКА</p>
             </li>
             }
             @@if(context.activeItem != "tech") {
             <li class="mx-2 px-3"><a href="/tech/"
-                    class="nav-link header--article-link h3 text-lowercase text-white header--nav-link-white">ТЕХНИКА</a></li>
+                    class="nav-link header--article-link h3 text-lowercase header--nav-link-white" style="color: @@color">ТЕХНИКА</a></li>
             }
 
             @@if(context.activeItem == "more") {
             <li class="mx-2 px-3">
-                <p class="nav-link header--nav-link-active h3 header--article-link v text-lowercase mb-0">ЕЩЕ</p>
+                <p class="nav-link header--nav-link-active h3 header--article-link v text-lowercase mb-0" style="color: @@color">ЕЩЕ</p>
             </li>
             }
             @@if(context.activeItem != "more") {
             <li class="mx-2 px-3"><a href="/more/"
-                    class="nav-link header--article-link h3 text-lowercase text-white header--nav-link-white">ЕЩЕ</a></li>
+                    class="nav-link header--article-link h3 text-lowercase header--nav-link-white" style="color: @@color">ЕЩЕ</a></li>
             }
         </ul>
     </nav>
@@ -243,10 +230,10 @@
                 class="header--mobile-item border-0 text-start fs-4">
                 Сменить тему
             </button>
-            <button onClick="ChangeBackground()" aria-label="Сменить задний фон"
+            <!-- <button onClick="ChangeBackground()" aria-label="Сменить задний фон"
                 class="header--mobile-item header--mobile-last-item border-0 text-start fs-4">
                 Сменить фон
-            </button>
+            </button> -->
 
             <a href="/about.html" aria-label="Открыть страницу о проекте" class="header--mobile-more fs-5">
                 О проекте
