--- a/src/parts/header.html
+++ b/src/parts/header.html
@@ -14,7 +14,7 @@
                             </button>
                         </div>
                     </div>
-                    <div class="header--adaptive-button me-2">
+                    <!-- <div class="header--adaptive-button me-2">
                         <div class="btn-rounded fs-5">
                             <button onClick="ChangeBackground()" aria-label="Сменить задний фон" class="btn btn-light px-4 py-2 d-flex header--button
                                                     text-decoration-none text-invert-dark align-items-center">
@@ -25,7 +25,7 @@
                                 Фон
                             </button>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
 
@@ -239,10 +239,10 @@
                 class="header--mobile-item border-0 text-start fs-4">
                 Сменить тему
             </button>
-            <button onClick="ChangeBackground()" aria-label="Сменить задний фон"
+            <!-- <button onClick="ChangeBackground()" aria-label="Сменить задний фон"
                 class="header--mobile-item header--mobile-last-item border-0 text-start fs-4">
                 Сменить фон
-            </button>
+            </button> -->
 
             <a href="/about.html" aria-label="Открыть страницу о проекте" class="header--mobile-more fs-5">
                 О проекте
