--- a/src/parts/footer.html
+++ b/src/parts/footer.html
@@ -6,8 +6,8 @@
             </div>
             <div>
                 <div class="text-invert btn-rounded fs-5">
-                    <button onClick="CommitPrivacy()" aria-label="Уменьшить размер шрифта на сайте"
-                        class="btn btn-dark btn-post--btn px-4 py-2 d-flex text-decoration-none text-invert align-items-center">
+                    <button onClick="CommitPrivacy()" aria-label="Подтвердить куки на сайте"
+                        class="btn btn-dark btn-post--btn px-3 py-2 d-flex text-decoration-none text-invert align-items-center">
                         Хорошо
                     </button>
                 </div>
@@ -83,26 +83,26 @@
             <div class="row row-cols-1 fs-6 row-cols-lg-4 g-2 g-lg-3 align-items-center">
                 <div class="col footer--adaptive-nav">
                     <div class="d-flex flex-wrap flex-column">
-                        <div><a href="/about.html" class="footer--more-link">О проекте</a></div>
-                        <div><a href="/privacy/" class="footer--more-link">Пользователю</a></div>
+                        <div><a href="/about.html" class="link">О проекте</a></div>
+                        <div><a href="/privacy/" class="link">Пользователю</a></div>
                     </div>
                 </div>
                 <div class="col footer--adaptive-nav">
                     <div class="d-flex flex-wrap flex-column">
-                        <div><a href="/updates.html" class="footer--more-link">Обновления</a></div>
-                        <div><a href="/translate.html" class="footer--more-link">Перевод сайта</a></div>
+                        <div><a href="/updates.html" class="link">Обновления</a></div>
+                        <div><a href="/translate.html" class="link">Перевод сайта</a></div>
                     </div>
                 </div>
                 <div class="col footer--adaptive-nav">
                     <div class="d-flex flex-wrap flex-column">
-                        <div><a href="/rss.xml" class="footer--more-link">RSS статей</a></div>
-                        <div><a href="/write-post.html" class="footer--more-link">Написать статью</a></div>
+                        <div><a href="/rss.xml" class="link">RSS статей</a></div>
+                        <div><a href="/write-post.html" class="link">Написать статью</a></div>
                     </div>
                 </div>
                 <div class="col footer--adaptive-nav">
                     <div class="d-flex flex-wrap flex-column">
-                        <div><a href="mailto:daniil@dybka.ru" class="footer--more-link">daniil@dybka.ru</a></div>
-                        <div><a href="//dybka.ru" target="_blank" class="footer--more-link">Проект от dybka.ru</a></div>
+                        <div><a href="mailto:daniil@dybka.ru" class="link">daniil@dybka.ru</a></div>
+                        <div><a href="//dybka.ru" target="_blank" class="link">Проект от dybka.ru</a></div>
                     </div>
                 </div>
             </div>
@@ -111,7 +111,7 @@
 </footer>
 
 @@if(context.noBG != "no") {
-    <script src="/js/bg.js"></script>
+    <!-- <script src="/js/bg.js"></script> -->
 }
 
 <script src="/js/theme.js"></script>
