--- a/src/html/updates/great-news-channel-special/index.html
+++ b/src/html/updates/great-news-channel-special/index.html
@@ -17,9 +17,21 @@
             })
 
             <div class="post--bg-image-block">
-                <div class="post--bg-image-top">
+                <div class="">
                     <h1 class="head--static-font">Обновление новостного канала Special</h1>
                     <p class="post--start-p subhead--static-font">Улучшение дизайна. Многоязычность. Доступность.</p>
+                </div>
+                <div class="post--bg-image-top">
+                    <a href="#read" class="btn btn-outline-light btn-lg post-button-rounded fs-4 px-3 pe-4 border-2">
+                        <span class="d-flex align-items-center text-white">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="white" class="me-3"
+                                viewBox="0 0 16 16">
+                                <path fill-rule="evenodd"
+                                    d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z" />
+                            </svg>
+                            Читать
+                        </span>
+                    </button>
                 </div>
                 <div class="post--bg-image-bottom">
                     <div class="text-white">
@@ -38,17 +50,53 @@
             })
 
             <div class="container--post">
+
+                <p class="mb-0 visually-hidden" id="read">Перейти к чтению</p>
+
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat, a?
+                    16 апреля на сайте медиа Special было выпущено крупное обновление с массовыми изменениями.
+                    Давайте подробнее поговорим про обновление.
                 </p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur veritatis sequi, voluptatum reiciendis
-                    aliquam quasi velit assumenda sunt repellat eaque. Nobis perspiciatis porro similique ipsam facere repudiandae
-                    dolore libero beatae?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur veritatis sequi, voluptatum reiciendis
-                    aliquam
-                    quasi velit assumenda sunt repellat eaque. Nobis perspiciatis porro similique ipsam facere repudiandae dolore
-                    libero
-                    beatae?</p>
+
+                <h3>Многоязычность сайта</h3>
+
+                <p>
+                    Теперь медиа Special поддерживает многоязычность. Это означает, что пользователи с разных стран
+                    могут создавать контент друг для друга на удобной площадке.
+                </p>
+
+                <p>
+                    Страницы с переводом представляют собой отдельную часть сайта. Стили и прочие элементы
+                    загружаются с основного домена, что обеспечивает быструю скорость загрузки и 100%
+                    получение содержимого пользователями.
+                </p>
+
+                <h3>Цветной фон</h3>
+
+                <p>
+                    Фон на сайте теперь представляет собой цвет в зависимости от темы: черный или белый.
+                    Ранее использовалась уникальная картинка, что негативно влияло на доступность содержимого,
+                    загрузку страниц.
+                </p>
+
+                <p>
+                    Отказ от уникального фона повлечет за собой прирост скорости. Вместе с тем, для лиц с ограниченными
+                    возможностями здоровья читать статьи будет приятнее из-за отсутствия ряби в глазах.
+                </p>
+
+                <h3>Новый формат страницы записи</h3>
+
+                <p>
+                    Страница записи имеет новый дизайн: используется дизайн стекла на сайте,
+                    изображение записи стало фоновым, содержимое отделилось от названия,
+                    добавлено большое удобств.
+                </p>
+
+                <p>
+                    Записи, написанные до 17 апреля 2023 года будут также доступны в старом дизайне.
+                    Новые страницы станут появляться с обновленным дизайном страницы.
+                </p>
+
             </div>
 
             <div class="container--post post--more">
