--- a/src/html/updates.html
+++ b/src/html/updates.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 @@include('../parts/head.html', {
-"title": "Обновления в сайте"
+"title": "Обновления на сайте"
 })
 <style>
     .text--more {
@@ -29,6 +29,7 @@
                 <li>Открытый код платформы</li>
                 <li>Новые категории.</li>
             </ul>
+            <a href="/updates/great-news-channel-special/" class="link">Читать</a>
         </div>
         <div class="fs-5 mb-5">
             <p class="text--more fs-6">Изменения 19.03.23</p>
