--- a/src/html/updates/great-news-channel-special/index.html
+++ b/src/html/updates/great-news-channel-special/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 @@include('../../../parts/head.html', {
-"title": "С чего я начал изучать программирование"
+"title": "Обновление медиа канала Special"
 })
 <link rel="stylesheet" href="/css/page.css">
 <link rel="stylesheet" href="/css/page--new.css">
@@ -18,8 +18,8 @@
 
             <div class="post--bg-image-block">
                 <div class="">
-                    <h1 class="head--static-font">Обновление новостного канала Special</h1>
-                    <p class="post--start-p subhead--static-font">Улучшение дизайна. Многоязычность. Доступность.</p>
+                    <h1 class="head--static-font">Обновление<br> медиа канала<br> Special</h1>
+                    <p class="post--start-p subhead--static-font">Улучшение дизайна.<br> Многоязычность.<br> Доступность.</p>
                 </div>
                 <div class="post--bg-image-top">
                     <a href="#read" class="btn btn-outline-light btn-lg post-button-rounded fs-4 px-3 pe-4 border-2">
@@ -97,13 +97,17 @@
                     Новые страницы станут появляться с обновленным дизайном страницы.
                 </p>
 
+                <p>
+                    Смотрите все изменения на медиа Special: <a href="//news.dybka.ru" class="link">news.dybka.ru</a>.
+                </p>
+
             </div>
 
             <div class="container--post post--more">
                 <p class="post--more-text mb-0">Автор:
                     <a href="/author/daniildybka" class="link">Даниил Дыбка</a>
                 </p>
-                <p class="post--more-text mb-0">02.02.23 12:00</p>
+                <p class="post--more-text mb-0">17.04.23 12:00</p>
             </div>
 
             @@include('../../../parts/p--more-3.html', {
