--- a/src/html/more/index.html
+++ b/src/html/more/index.html
@@ -28,42 +28,43 @@
         <div style="margin-bottom: 50px">
             <h1>Статьи</h1>
             <ul class="fs-4">
-                <li><a href="#" class="link">Как успешно продавать на Б/У рынках</a></li>
-                <li><a href="#" class="link">Общение с клиентами в интернете</a></li>
-                <li><a href="#" class="link">Б/У рынок: что это, с чем его едят?</a></li>
-                <li><a href="#" class="link">Путь программиста — это трудный путь?</a></li>
-                <li><a href="#" class="link">История live.creagoo.ru — вынужденное закрытие</a></li>
-                <li><a href="#" class="link">С чего я начал изучать программирование</a></li>
-                <li><a href="#" class="link">Как я борюсь против выгорания</a></li>
-                <li><a href="#" class="link">Как я разрабатываю сайты на PHP</a></li>
-                <li><a href="#" class="link">Разработка pet-проектов — что это и для чего?</a></li>
+                <li><a href="/p/how-to-sell-on-buy-markets/" class="link">Как успешно продавать на Б/У рынках</a></li>
+                <li><a href="/p/communication-with-clients-on-the-internet/" class="link">Общение с клиентами в интернете</a></li>
+                <li><a href="/p/used-market-what-is-it-with-what-it-is-eaten/" class="link">Б/У рынок: что это, с чем его едят?</a></li>
+                <li><a href="/p/the-path-of-a-programmer-is-a-difficult-path/" class="link">Путь программиста — это трудный путь?</a></li>
+                <li><a href="/p/project-development-history-live.creagoo.ru-its-forced-closure/" class="link">История live.creagoo.ru — вынужденное закрытие</a></li>
+                <li><a href="/p/how-did-i-start-learning-programming/" class="link">С чего я начал изучать программирование</a></li>
+                <li><a href="/p/how-i-fight-against-burnout/" class="link">Как я борюсь против выгорания</a></li>
+                <li><a href="/p/how-i-develop-websites-in-php/" class="link">Как я разрабатываю сайты на PHP</a></li>
+                <li><a href="/p/pet-project-development-what-is-it-and-for-what/" class="link">Разработка pet-проектов — что это и для чего?</a></li>
             </ul>
         </div>
         <div style="margin-bottom: 50px">
             <h1>Обновления</h1>
             <ul class="fs-4">
-                <li><a href="#" class="link">Упрощение, улучшение и «Поделиться»</a></li>
-                <li><a href="#" class="link">Новый сайт creagoo.ru</a></li>
+                <li><a href="/updates/great-news-channel-special/" class="link">Обновление медиа канала Special</a></li>
+                <li><a href="/updates/change-creagoo-ru-simplify-improve-and-share/" class="link">Упрощение, улучшение и «Поделиться»</a></li>
+                <li><a href="/updates/novyy-sayt-creagoo-ru/" class="link">Новый сайт creagoo.ru</a></li>
             </ul>
         </div>
         <div style="margin-bottom: 50px">
             <h1>Игры</h1>
             <ul class="fs-4">
-                <li><a href="#" class="link">Babka On The Hunt</a></li>
-                <li><a href="#" class="link">Sweetness</a></li>
-                <li><a href="#" class="link">Запомни эти карты</a></li>
-                <li><a href="#" class="link">Камень ножницы бумага</a></li>
+                <li><a href="/games/babkaonthehuntclassic/" class="link">Babka On The Hunt</a></li>
+                <li><a href="/games/sweetness/" class="link">Sweetness</a></li>
+                <li><a href="/games/rememberthesecards/" class="link">Запомни эти карты</a></li>
+                <li><a href="/games/rockpaperscissors/" class="link">Камень ножницы бумага</a></li>
             </ul>
         </div>
         <div style="margin-bottom: 50px">
             <h1>Техника</h1>
             <ul class="fs-4">
-                <li><a href="#" class="link">Обзор на макбук 2017 года</a></li>
-                <li><a href="#" class="link">Разница в макбуках за 3 года</a></li>
-                <li><a href="#" class="link">iPad mini 4 — неоднозначный девайс</a></li>
-                <li><a href="#" class="link">Новое поколение устройства — iPhone XR</a></li>
-                <li><a href="#" class="link">Macbook Pro 2014 13' — обзор</a></li>
-                <li><a href="#" class="link">Опыт использования iPhone 6s в течение полугода</a></li>
+                <li><a href="/tech/macbook-2017-review/" class="link">Обзор на макбук 2017 года</a></li>
+                <li><a href="/tech/difference-in-macbooks-for-3-years/" class="link">Разница в макбуках за 3 года</a></li>
+                <li><a href="/tech/ipad-mini-4-is-an-ambiguous-device/" class="link">iPad mini 4 — неоднозначный девайс</a></li>
+                <li><a href="/tech/the-new-generation-of-the-iphone-xr-device/" class="link">Новое поколение устройства — iPhone XR</a></li>
+                <li><a href="/tech/macbook-pro-2014-13-review/" class="link">Macbook Pro 2014 13' — обзор</a></li>
+                <li><a href="/tech/experience-using-iphone-6s-for-six-months/" class="link">Опыт использования iPhone 6s в течение полугода</a></li>
             </ul>
         </div>
         <div style="margin-bottom: 50px">
