--- a/src/html/about.html
+++ b/src/html/about.html
@@ -30,6 +30,9 @@
                 <li><a href="/translate.html" class="link">
                         Перевод сайта
                     </a></li>
+                <li><a href="/contact.html" class="link">
+                    Связаться с автором
+                </a></li>
                 <li><a href="//it.dybka.ru" target="_blank" class="link">
                         Еще больше от dybka.ru
                     </a></li>
