--- a/src/html/updates/great-news-channel-special/index.html
+++ b/src/html/updates/great-news-channel-special/index.html
@@ -12,32 +12,35 @@
 
         <div class="post--bg-image" style="background-image: url('/img/updates/code01.jpg')">
 
-            @@include('../../../parts/header-post.html', {
-                "color": "#000"
-            })
-
             <div class="post--bg-image-block">
-                <div class="">
-                    <h1 class="head--static-font">Обновление<br> медиа канала<br> Special</h1>
-                    <p class="post--start-p subhead--static-font">Улучшение дизайна.<br> Многоязычность.<br> Доступность.</p>
-                </div>
-                <div class="post--bg-image-top">
-                    <a href="#read" class="btn btn-outline-light btn-lg post-button-rounded fs-4 px-3 pe-4 border-2">
-                        <span class="d-flex align-items-center text-white">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="white" class="me-3"
-                                viewBox="0 0 16 16">
-                                <path fill-rule="evenodd"
-                                    d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z" />
-                            </svg>
-                            Читать
-                        </span>
-                    </button>
-                </div>
-                <div class="post--bg-image-bottom">
-                    <div class="text-white">
-                        <a href="/author/daniildybka" class="link-white">
-                            Даниил Дыбка
-                        </a>
+
+                @@include('../../../parts/header-post.html', {
+                "color": "#fff"
+                })
+
+                <div class="post--bg-content">
+                    <div>
+                        <h1 class="head--static-font">Обновление<br> медиа канала<br> Special</h1>
+                        <p class="post--start-p subhead--static-font">Улучшение дизайна.<br> Многоязычность.<br> Доступность.</p>
+                    </div>
+                    <div class="post--bg-image-top">
+                        <a href="#read" class="btn btn-outline-light btn-lg post-button-rounded fs-4 px-3 pe-4 border-2">
+                            <span class="d-flex align-items-center text-white">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="white" class="me-3"
+                                    viewBox="0 0 16 16">
+                                    <path fill-rule="evenodd"
+                                        d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z" />
+                                </svg>
+                                Читать
+                            </span>
+                        </button>
+                    </div>
+                    <div class="post--bg-image-bottom">
+                        <div class="text-white">
+                            <a href="/author/daniildybka" class="link-white">
+                                Даниил Дыбка
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
