--- a/src/html/updates.html
+++ b/src/html/updates.html
@@ -1,92 +1,85 @@
 <!DOCTYPE html>
 <html lang="ru">
-@@include('../parts/head.html', {
-"title": "Обновления на сайте"
-})
-<style>
-    .text--more {
-        margin-bottom: 5px;
-        font-family: MenorahGrotesk !important;
-    }
-</style>
+	@@include('../parts/head.html', { "title": "Обновления на сайте" })
+	<style>
+		.text--more {
+			margin-bottom: 5px;
+			font-family: HalvarBreit !important;
+		}
+	</style>
 
-<body>
-    @@include('../parts/header.html', {
+	<body>
+		@@include('../parts/header.html', { })
 
-    })
+		<main class="container">
+			<div class="border-bottom mb-5">
+				<h1>Обновления Special</h1>
+			</div>
+			<div class="fs-5 mb-5">
+				<p class="text--more fs-6">Изменения 16.04.2023</p>
+				<ul>
+					<li>Обновлен интерфейс</li>
+					<li>Многоязычность сайта</li>
+					<li>Новые статьи на русском</li>
+					<li>Активная поддержка сайта</li>
+					<li>Открытый код платформы</li>
+					<li>Новые категории.</li>
+				</ul>
+				<a href="/updates/great-news-channel-special/" class="link">Читать</a>
+			</div>
+			<div class="fs-5 mb-5">
+				<p class="text--more fs-6">Изменения 19.03.23</p>
+				<ul>
+					<li>Улучшено визуальное состовляющее</li>
+					<li>Упрощен дизайн</li>
+					<li>Улучшена логика работы платформы.</li>
+				</ul>
+			</div>
+			<div class="fs-5 mb-5">
+				<p class="text--more fs-6">Изменения 18.03.23</p>
+				<ul>
+					<li>Используется технология GPT-4 в статьях</li>
+					<li>Возможность написать статью пользователю.</li>
+				</ul>
+			</div>
+			<div class="fs-5 mb-5">
+				<p class="text--more fs-6">Изменения 17.03.23</p>
+				<ul>
+					<li>Смена активного шрифта на сайте</li>
+					<li>Обновление отображения страниц</li>
+					<li>Список статей в конце активной</li>
+					<li>Работа над переводом сайта</li>
+					<li>Изменения в футере</li>
+					<li>Добавлена категория «Игры».</li>
+				</ul>
+			</div>
+			<div class="fs-5 mb-5">
+				<p class="text--more fs-6">Изменения 20.02.23</p>
+				<ul>
+					<li>Теперь в футере больше красоты и возможностей</li>
+					<li>Добавлены RSS-ленты</li>
+					<li>Работа над переводом сайта</li>
+					<li>Работа над возможностью создания постов</li>
+					<li>Работа над дополнительными изображениями в постах.</li>
+				</ul>
+			</div>
+			<div class="fs-5 mb-5">
+				<p class="text--more fs-6">Изменения 18.02.23</p>
+				<ul>
+					<li>Добавлена категория «Обновления»</li>
+					<li>
+						Расширенные возможности просмотра содержимого у отдельных авторов
+					</li>
+					<li>Возможность увеличения размера текста на странице записи</li>
+					<li>Проведены тестирования на сервере.</li>
+				</ul>
+			</div>
+			<div class="fs-5 mb-5">
+				<p class="text--more fs-6">Изменения 06.02.23</p>
+				<p>Выход в продакшен.</p>
+			</div>
+		</main>
 
-    <main class="container">
-        <div class="border-bottom mb-5">
-            <h1>Обновления Special</h1>
-        </div>
-        <div class="fs-5 mb-5">
-            <p class="text--more fs-6">Изменения 16.04.2023</p>
-            <ul>
-                <li>Обновлен интерфейс</li>
-                <li>Многоязычность сайта</li>
-                <li>Новые статьи на русском</li>
-                <li>Активная поддержка сайта</li>
-                <li>Открытый код платформы</li>
-                <li>Новые категории.</li>
-            </ul>
-            <a href="/updates/great-news-channel-special/" class="link">Читать</a>
-        </div>
-        <div class="fs-5 mb-5">
-            <p class="text--more fs-6">Изменения 19.03.23</p>
-            <ul>
-                <li>Улучшено визуальное состовляющее</li>
-                <li>Упрощен дизайн</li>
-                <li>Улучшена логика работы платформы.</li>
-            </ul>
-        </div>
-        <div class="fs-5 mb-5">
-            <p class="text--more fs-6">Изменения 18.03.23</p>
-            <ul>
-                <li>Используется технология GPT-4 в статьях</li>
-                <li>Возможность написать статью пользователю.</li>
-            </ul>
-        </div>
-        <div class="fs-5 mb-5">
-            <p class="text--more fs-6">Изменения 17.03.23</p>
-            <ul>
-                <li>Смена активного шрифта на сайте</li>
-                <li>Обновление отображения страниц</li>
-                <li>Список статей в конце активной</li>
-                <li>Работа над переводом сайта</li>
-                <li>Изменения в футере</li>
-                <li>Добавлена категория «Игры».</li>
-            </ul>
-        </div>
-        <div class="fs-5 mb-5">
-            <p class="text--more fs-6">Изменения 20.02.23</p>
-            <ul>
-                <li>Теперь в футере больше красоты и возможностей</li>
-                <li>Добавлены RSS-ленты</li>
-                <li>Работа над переводом сайта</li>
-                <li>Работа над возможностью создания постов</li>
-                <li>Работа над дополнительными изображениями в постах.</li>
-            </ul>
-        </div>
-        <div class="fs-5 mb-5">
-            <p class="text--more fs-6">Изменения 18.02.23</p>
-            <ul>
-                <li>Добавлена категория «Обновления»</li>
-                <li>Расширенные возможности просмотра содержимого
-                    у отдельных авторов
-                </li>
-                <li>Возможность увеличения размера текста на странице записи</li>
-                <li>Проведены тестирования на сервере.</li>
-            </ul>
-        </div>
-        <div class="fs-5 mb-5">
-            <p class="text--more fs-6">Изменения 06.02.23</p>
-            <p>Выход в продакшен.</p>
-        </div>
-    </main>
-
-    @@include('../parts/footer.html', {
-
-    })
-</body>
-
+		@@include('../parts/footer.html', { })
+	</body>
 </html>
