--- a/src/html/about.html
+++ b/src/html/about.html
@@ -1,195 +1,220 @@
 <!DOCTYPE html>
 <html lang="ru">
-@@include('../parts/head.html', {
-"title": "О проекте Special"
-})
+	@@include('../parts/head.html', { "title": "О проекте Special" })
 
-<body>
-    @@include('../parts/header.html', {
+	<body>
+		@@include('../parts/header.html', { })
 
-    })
+		<main class="container">
+			<div class="border-bottom mb-5">
+				<h1>Ссылки Special</h1>
+			</div>
+			<div class="fs-5 mb-5">
+				<ul class="mb-4">
+					<li>О проекте Special (текущая страница)</li>
+					<li><a href="/updates.html" class="link"> Обновления Special </a></li>
+					<li><a href="/rss.xml" class="link"> Получить RSS статей </a></li>
+					<li><a href="/write-post.html" class="link"> Написать статью </a></li>
+					<li><a href="/translate.html" class="link"> Перевод сайта </a></li>
+					<li>
+						<a href="/contact.html" class="link"> Связаться с автором </a>
+					</li>
+					<li>
+						<a href="//it.dybka.ru" target="_blank" class="link">
+							Еще больше от dybka.ru
+						</a>
+					</li>
+				</ul>
+			</div>
 
-    <main class="container">
+			<div class="border-bottom mb-5">
+				<h1>О проекте Special</h1>
+			</div>
+			<div class="fs-5 mb-5">
+				<h2>Что такое Special?</h2>
+				<p>
+					Special — это открытый источник медиа сайтов
+					<a href="//dybka.ru" class="link">dybka.ru</a>,
+					<a href="//it.dybka.ru" class="link">it.dybka.ru</a>,
+					<a href="//creagoo.ru" class="link">creagoo.ru</a> и других,
+					принадлежащих Даниилу Дыбка (<a href="//dybka.ru" class="link"
+						>dybka.ru</a
+					>).
+				</p>
+				<p>
+					Главная задача сайта Special — простым языком и удобными способами
+					доносить полезную информацию до людей. Сайт Special предоставляет
+					удобный доступ к чтению статей. Выбор, на какой платформе производить
+					чтение находится за Вами.
+				</p>
+			</div>
+			<div class="fs-5 mb-5">
+				<h2>Стать автором</h2>
+				<p>
+					У Вас есть возможность предложить интересную статью для сайта Special.
+					Для добавления Вас в качестве автора на сайте Special достаточно
+					обратиться на почтовый адрес
+					<a href="mailto:daniil@dybka.ru" class="link">daniil@dybka.ru</a>.
+				</p>
+				<p>
+					К заявке на почтовый адрес Вам следует прикрепить следующие материалы:
+					название поста, содержимое поста (в содержимом укажите, что является
+					текстом, а что названием), фотографию поста.
+				</p>
+				<p>
+					Также нужно будет указать Ваше имя, фамилию и желаемую аватарку
+					(128x128), которая будет отображаться на Вашей странице автора статей.
+				</p>
+				<p>
+					Ваша заявка будет рассмотрена. В случае положительной проверки Ваш
+					пост будет опубликован на сайте Special.
+				</p>
+			</div>
+			<div class="fs-5 mb-5">
+				<h2>Запрещенные темы</h2>
+				<p>
+					На сайте Special запрещено выкладывать материалы с ненормативной
+					лексикой, оскорблениями, разжиганием ненависти. На обсуждение
+					запрещены: темы войны, темы религии, «острые» темы и прочие, которые
+					могут вызвать общих негатив у людей.
+				</p>
+				<p>
+					Для публикации запрещены рекламные посты без согласования модераторов
+					на их публикацию. Любое наличие рекламных отображений и прочего будет
+					являться причиной для отказа публикации материала.
+				</p>
+				<p>
+					Все публикуемые посты проходят проверку модераторами. Опубликовать
+					пост без согласия модераторов не предоставляется возможным.
+				</p>
+			</div>
+			<div class="fs-5 mb-5">
+				<h2>Реклама на сайте</h2>
+				<p>
+					На сайте медиа Special у Вас есть возможность заказать рекламу. Вам
+					следует обратиться на почтовый адрес
+					<a href="mailto:daniil@dybka.ru" class="link">daniil@dybka.ru</a>.
+				</p>
+				<p>
+					Свяжитесь по почтовому адресу, опишите Ваше предложение. Также укажите
+					формат, в котором Вы хотите видеть рекламу. В случае одобрения
+					публикации рекламы, медиа Special выполнит Ваши требования по
+					публикации рекламы на сайте медиа Special.
+				</p>
+			</div>
+			<div class="fs-5 mb-5">
+				<h2>Запрещено к рекламе</h2>
+				<p>
+					К рекламе запрещены все темы, являющиеся запрещенными на территории
+					РФ. В случае с медиа Special запрещены для рекламы: запрещенные
+					средства, продукты 18+, различные казино, букмекерские компании,
+					платформы, в основе которых лежит обман пользователей.
+				</p>
+				<p>
+					В том случае, если Ваш продукт не несет целей обмануть аудиторию,
+					заработать на этом и не является запрещенным на территории РФ и на
+					сайте Special, то Вы можете рассчитывать на публикацию рекламы, в
+					случае заинтересованности с обеих сторон (Вашей и медиа Special).
+				</p>
+			</div>
+			<div class="fs-5 mb-5">
+				<h2>Безопасность сайта</h2>
+				<p>
+					Доменный адрес использует защищенный протокол подключения.
+					Используется SSL-сертификат для безопасного и быстрого подключения и
+					получения информации. Страницы сайта формируются до публикации и
+					являются «статическими».
+				</p>
+			</div>
+			<div class="fs-5 mb-5">
+				<h2>Техническая оптимизация</h2>
+				<p>
+					Большое количество внимания было уделено на активную оптимизацию
+					загрузки сайта, доступности содержимого с клавиатуры, адаптивного
+					отображения сайта на разных девайсах, возможности ознакомиться с
+					содержимым при разных условиях.
+				</p>
+				<p>
+					Вышеперечисленные критерии не являются обязательными, это факт. В
+					создании сайта есть лишь «рекомендации». Но также существуют и отличия
+					между хорошим сайтом и плохим. Плохим сайтом не хочется пользоваться,
+					тогда какой смысл от этого сайта, если пользователь не хочет получать
+					информацию от сайта?
+				</p>
+				<p>
+					Активно уделяется внимание пользователю. Существует большое количество
+					людей, которые тестируют отображение сайта. Это действительно важные
+					факторы, которые помогают пользователям дольше оставаться на сайте.
+				</p>
+			</div>
+			<div class="fs-5 mb-5">
+				<h2>Доступность сайта</h2>
+				<p>
+					Сайт Special доступен для всех пользователей. Имеется возможность
+					перемещаться по элементам с помощью клавиатуры и получать доступ о
+					информации интерактивных элементах. Настроена возможность
+					использования программ для чтения текста с экрана. Прописаны
+					параметры-описания для изображений, чтобы все люди могли узнать, о чем
+					нам говорит размещенная на сайте картинка.
+				</p>
+			</div>
+			<div class="fs-5 mb-5">
+				<h2>Поддержать проект</h2>
+				<p>
+					Поддержать проект вы можете одним из способов: написать сообщение
+					автору (<a href="//t.me/ddybka" class="link" target="_blank"
+						>@ddybka</a
+					>), написать статью для Special (<a
+						href="/write-post.html"
+						class="link"
+						>Как?</a
+					>).
+				</p>
+				<p>
+					Ссылка на репозиторий GitHub:
+					<a
+						href="//github.com/DanyaBooba/special-gulp-2023"
+						class="link"
+						target="_blank"
+						>Открыть</a
+					>
+				</p>
+			</div>
+			<div class="fs-5 mb-5">
+				<h2>Исходники</h2>
+				<ul>
+					<li>
+						<a href="/download/special-dark.zip" class="link">Логотип черный</a>
+					</li>
+					<li>
+						<a href="/download/special-white.zip" class="link">Логотип белый</a>
+					</li>
+				</ul>
+			</div>
+			<div class="fs-5 mb-5">
+				<h2>Шрифты</h2>
+				<p>
+					На сайте используется шрифт HalvarBreit начертания Bold для
+					заголовков.
+				</p>
+				<p>
+					На сайте используется шрифт NotoSans начертаний Regular, Medium и Bold
+					для остального текста.
+				</p>
+			</div>
+			<div class="fs-5 mb-5">
+				<h2>Автор</h2>
+				<p>
+					Сайт разрабатывается Даниилом Дыбка (<a
+						href="//dybka.ru"
+						target="_blank"
+						class="link"
+						>dybka.ru</a
+					>) с 15.01.2022.
+				</p>
+			</div>
+		</main>
 
-        <div class="border-bottom mb-5">
-            <h1>Ссылки Special</h1>
-        </div>
-        <div class="fs-5 mb-5">
-
-            <ul class="mb-4">
-                <li>О проекте Special (текущая страница)</li>
-                <li><a href="/updates.html" class="link">
-                        Обновления Special
-                    </a></li>
-                <li><a href="/rss.xml" class="link">
-                        Получить RSS статей
-                    </a></li>
-                <li><a href="/write-post.html" class="link">
-                        Написать статью
-                    </a></li>
-                <li><a href="/translate.html" class="link">
-                        Перевод сайта
-                    </a></li>
-                <li><a href="/contact.html" class="link">
-                    Связаться с автором
-                </a></li>
-                <li><a href="//it.dybka.ru" target="_blank" class="link">
-                        Еще больше от dybka.ru
-                    </a></li>
-            </ul>
-        </div>
-
-        <div class="border-bottom mb-5">
-            <h1>О проекте Special</h1>
-        </div>
-        <div class="fs-5 mb-5">
-
-            <h2>Что такое Special?</h2>
-            <p>
-                Special — это открытый источник медиа сайтов <a href="//dybka.ru" class="link">dybka.ru</a>,
-                <a href="//it.dybka.ru" class="link">it.dybka.ru</a>, <a href="//creagoo.ru" class="link">creagoo.ru</a> и других,
-                принадлежащих Даниилу Дыбка (<a href="//dybka.ru" class="link">dybka.ru</a>).
-            </p>
-            <p>
-                Главная задача сайта Special — простым языком и удобными способами доносить полезную информацию до людей.
-                Сайт Special предоставляет удобный доступ к чтению статей. Выбор, на какой платформе производить чтение
-                находится за Вами.
-            </p>
-        </div>
-        <div class="fs-5 mb-5">
-            <h2>Стать автором</h2>
-            <p>
-                У Вас есть возможность предложить интересную статью для сайта Special. Для
-                добавления Вас в качестве автора на сайте Special достаточно обратиться
-                на почтовый адрес <a href="mailto:daniil@dybka.ru" class="link">daniil@dybka.ru</a>.
-            </p>
-            <p>
-                К заявке на почтовый адрес Вам следует прикрепить следующие материалы: название поста, содержимое поста
-                (в содержимом укажите, что является текстом, а что названием), фотографию поста.
-            </p>
-            <p>
-                Также нужно будет указать Ваше имя, фамилию и желаемую аватарку (128x128), которая будет отображаться
-                на Вашей странице автора статей.
-            </p>
-            <p>
-                Ваша заявка будет рассмотрена. В случае положительной проверки
-                Ваш пост будет опубликован на сайте Special.
-            </p>
-        </div>
-        <div class="fs-5 mb-5">
-            <h2>Запрещенные темы</h2>
-            <p>
-                На сайте Special запрещено выкладывать материалы с ненормативной лексикой, оскорблениями,
-                разжиганием ненависти. На обсуждение запрещены: темы войны, темы религии, «острые» темы и прочие,
-                которые могут вызвать общих негатив у людей.
-            </p>
-            <p>
-                Для публикации запрещены рекламные посты без согласования модераторов на их публикацию.
-                Любое наличие рекламных отображений и прочего будет являться причиной для отказа
-                публикации материала.
-            </p>
-            <p>
-                Все публикуемые посты проходят проверку модераторами. Опубликовать пост без согласия
-                модераторов не предоставляется возможным.
-            </p>
-        </div>
-        <div class="fs-5 mb-5">
-            <h2>Реклама на сайте</h2>
-            <p>
-                На сайте медиа Special у Вас есть возможность заказать рекламу. Вам следует обратиться
-                на почтовый адрес <a href="mailto:daniil@dybka.ru" class="link">daniil@dybka.ru</a>.
-            </p>
-            <p>
-                Свяжитесь по почтовому адресу, опишите Ваше предложение. Также укажите формат, в котором
-                Вы хотите видеть рекламу. В случае одобрения публикации рекламы, медиа Special выполнит
-                Ваши требования по публикации рекламы на сайте медиа Special.
-            </p>
-        </div>
-        <div class="fs-5 mb-5">
-            <h2>Запрещено к рекламе</h2>
-            <p>
-                К рекламе запрещены все темы, являющиеся запрещенными на территории РФ. В случае с
-                медиа Special запрещены для рекламы: запрещенные средства, продукты 18+,
-                различные казино, букмекерские компании, платформы, в основе которых лежит
-                обман пользователей.
-            </p>
-            <p>
-                В том случае, если Ваш продукт не несет целей обмануть аудиторию, заработать на этом
-                и не является запрещенным на территории РФ и на сайте Special, то Вы можете рассчитывать
-                на публикацию рекламы, в случае заинтересованности с обеих сторон (Вашей и медиа Special).
-            </p>
-        </div>
-        <div class="fs-5 mb-5">
-            <h2>Безопасность сайта</h2>
-            <p>
-                Доменный адрес использует защищенный протокол подключения. Используется SSL-сертификат для
-                безопасного и быстрого подключения и получения информации. Страницы сайта формируются
-                до публикации и являются «статическими».
-            </p>
-        </div>
-        <div class="fs-5 mb-5">
-            <h2>Техническая оптимизация</h2>
-            <p>
-                Большое количество внимания было уделено на активную оптимизацию загрузки сайта, доступности содержимого
-                с клавиатуры, адаптивного отображения сайта на разных девайсах, возможности ознакомиться с содержимым при разных условиях.
-            </p>
-            <p>
-                Вышеперечисленные критерии не являются обязательными, это факт. В создании сайта есть лишь «рекомендации».
-                Но также существуют и отличия между хорошим сайтом и плохим. Плохим сайтом не хочется пользоваться, тогда какой
-                смысл от этого сайта, если пользователь не хочет получать информацию от сайта?
-            </p>
-            <p>
-                Активно уделяется внимание пользователю. Существует большое количество людей, которые тестируют отображение сайта. Это
-                действительно важные факторы, которые помогают пользователям дольше оставаться на сайте.
-            </p>
-        </div>
-        <div class="fs-5 mb-5">
-            <h2>Доступность сайта</h2>
-            <p>
-                Сайт Special доступен для всех пользователей. Имеется возможность перемещаться по элементам с помощью клавиатуры
-                и получать доступ о информации интерактивных элементах. Настроена возможность использования программ для
-                чтения текста с экрана. Прописаны параметры-описания для изображений, чтобы все люди могли узнать, о чем
-                нам говорит размещенная на сайте картинка.
-            </p>
-        </div>
-        <div class="fs-5 mb-5">
-            <h2>Поддержать проект</h2>
-            <p>
-                Поддержать проект вы можете одним из способов: написать сообщение автору
-                (<a href="//t.me/ddybka" class="link" target="_blank">@ddybka</a>),
-                написать статью для Special (<a href="/write-post.html" class="link">Как?</a>).
-            </p>
-            <p>
-                Ссылка на репозиторий GitHub: <a href="//github.com/DanyaBooba/special-gulp-2023" class="link" target="_blank">Открыть</a>
-            </p>
-        </div>
-        <div class="fs-5 mb-5">
-            <h2>Исходники</h2>
-            <ul>
-                <li><a href="/download/special-dark.zip" class="link">Логотип черный</a></li>
-                <li><a href="/download/special-white.zip" class="link">Логотип белый</a></li>
-            </ul>
-        </div>
-        <div class="fs-5 mb-5">
-            <h2>Шрифты</h2>
-            <p>
-                На сайте используется шрифт MenorahGrotesk начертания Bold для заголовков.
-            </p>
-            <p>
-                На сайте используется шрифт NotoSans начертаний Regular, Medium и Bold для остального текста.
-            </p>
-        </div>
-        <div class="fs-5 mb-5">
-            <h2>Автор</h2>
-            <p>
-                Сайт разрабатывается Даниилом Дыбка (<a href="//dybka.ru" target="_blank"class="link">dybka.ru</a>) с 15.01.2022.
-            </p>
-        </div>
-    </main>
-
-    @@include('../parts/footer.html', {
-
-    })
-</body>
-
+		@@include('../parts/footer.html', { })
+	</body>
 </html>
