--- a/src/html/more/index.html
+++ b/src/html/more/index.html
@@ -10,7 +10,7 @@
     })
 
     <div class="container container--main" style="margin-bottom: 70px">
-        <h1 class="display-5 fw-bold">Направления</h1>
+        <h1 class="display-5 fw-bold">НАПРАВЛЕНИЯ</h1>
         <div class="d-flex flex-wrap mb-3 align-items-center">
             <p class="mb-0">
                 <a href="/p/" aria-label="Смотреть все статьи Спешиал" class="link">Статьи</a>
@@ -26,7 +26,7 @@
     <main class="container container--main">
 
         <div style="margin-bottom: 50px">
-            <h1>Статьи</h1>
+            <h1>СТАТЬИ</h1>
             <ul class="fs-4">
                 <li><a href="/p/how-to-sell-on-buy-markets/" class="link">Как успешно продавать на Б/У рынках</a></li>
                 <li><a href="/p/communication-with-clients-on-the-internet/" class="link">Общение с клиентами в интернете</a></li>
@@ -40,7 +40,7 @@
             </ul>
         </div>
         <div style="margin-bottom: 50px">
-            <h1>Обновления</h1>
+            <h1>ОБНОВЛЕНИЯ</h1>
             <ul class="fs-4">
                 <li><a href="/updates/great-news-channel-special/" class="link">Обновление медиа канала Special</a></li>
                 <li><a href="/updates/change-creagoo-ru-simplify-improve-and-share/" class="link">Упрощение, улучшение и «Поделиться»</a></li>
@@ -48,7 +48,7 @@
             </ul>
         </div>
         <div style="margin-bottom: 50px">
-            <h1>Игры</h1>
+            <h1>ИГРЫ</h1>
             <ul class="fs-4">
                 <li><a href="/games/babkaonthehuntclassic/" class="link">Babka On The Hunt</a></li>
                 <li><a href="/games/sweetness/" class="link">Sweetness</a></li>
@@ -57,7 +57,7 @@
             </ul>
         </div>
         <div style="margin-bottom: 50px">
-            <h1>Техника</h1>
+            <h1>ТЕХНИКА</h1>
             <ul class="fs-4">
                 <li><a href="/tech/macbook-2017-review/" class="link">Обзор на макбук 2017 года</a></li>
                 <li><a href="/tech/difference-in-macbooks-for-3-years/" class="link">Разница в макбуках за 3 года</a></li>
