--- a/src/html/p/index.html
+++ b/src/html/p/index.html
@@ -10,7 +10,7 @@
     })
 
     <div class="container container--main mb-4">
-        <h1 class="display-5 fw-bold">Все статьи</h1>
+        <h1 class="display-5 fw-bold">ВСЕ СТАТЬИ</h1>
     </div>
 
     <main>
