--- a/src/html/updates.html
+++ b/src/html/updates.html
@@ -16,6 +16,16 @@
 				<h1>Обновления Special</h1>
 			</div>
 			<div class="fs-5 mb-5">
+				<p class="text--more fs-6">Изменения 28.04.2023</p>
+				<ul>
+					<li>Исправление ошибок</li>
+					<li>Дата написания в XML</li>
+					<li>Улучшение нового стиля записей</li>
+					<li>Новый шрифт</li>
+					<li>Работа над архивом.</li>
+				</ul>
+			</div>
+			<div class="fs-5 mb-5">
 				<p class="text--more fs-6">Изменения 16.04.2023</p>
 				<ul>
 					<li>Обновлен интерфейс</li>
