--- a/src/html/tech/index.html
+++ b/src/html/tech/index.html
@@ -10,7 +10,7 @@
     })
 
     <div class="container container--main">
-        <h1 class="display-5 fw-bold">Техника</h1>
+        <h1 class="display-5 fw-bold">ТЕХНИКА</h1>
         <div class="d-flex flex-wrap mb-3 align-items-center">
             <p class="mb-0">
                 <a href="/p/" aria-label="Смотреть все статьи Спешиал" class="link">Статьи</a>
